--- a/.eslintrc
+++ b/.eslintrc
@@ -29,8 +29,6 @@
             "never"
         ],
         "brace-style": "error",
-        "camelcase": "error",
-        "capitalized-comments": "error",
         "comma-dangle": [
             "error",
             "never"
@@ -62,12 +60,7 @@
         ],
         "jsx-quotes": "error",
         "key-spacing": "error",
-        "keyword-spacing": [
-            "error",
-            {
-                "before": false
-            }
-        ],
+        "keyword-spacing": "error",
         "max-depth": "warn",
         "max-len": [
             "error",
@@ -80,7 +73,10 @@
             4
         ],
         "max-params": "error",
-        "multiline-comment-style": "error",
+        "multiline-comment-style": [
+            "error",
+            "separate-line"
+        ],
         "new-cap": "error",
         "new-parens": "error",
         "no-array-constructor": "error",
@@ -123,7 +119,10 @@
         "no-useless-call": "error",
         "no-useless-concat": "error",
         "no-useless-return": "error",
-        "object-curly-spacing": "error",
+        "object-curly-spacing": [
+            "error",
+            "never"
+        ],
         "object-shorthand": "error",
         "operator-assignment": "error",
         "operator-linebreak": [
