--- a/.eslintrc
+++ b/.eslintrc
@@ -54,10 +54,6 @@
         ],
         "generator-star-spacing": "error",
         "grouped-accessor-pairs": "error",
-        "indent": [
-            "error",
-            4
-        ],
         "jsx-quotes": "error",
         "key-spacing": "error",
         "keyword-spacing": "error",
@@ -186,6 +182,7 @@
             "never"
         ],
         "@typescript-eslint/explicit-module-boundary-types": "off",
-        "@typescript-eslint/no-unused-vars": "error"
+        "@typescript-eslint/no-unused-vars": "error",
+        "@typescript-eslint/indent": "error"
     }
 }
